componentize the nav and highlight active route

--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-spring": "^8.0.27"
   },
   "devDependencies": {
+    "@types/node": "^13.9.1",
+    "@types/react": "^16.9.23",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^1.2.0"
+    "tailwindcss": "^1.2.0",
+    "typescript": "^3.8.3"
   }
 }
